# dapi

./: .gitignore  LICENSE  README.md  pyproject.toml
dapi/: __init__.py
dapi/rest/: __init__.py  builders.py  client.py  errors.py  request.py  response.py  route.py
